[gd_scene load_steps=2 format=3 uid="uid://b8vcllsc3lodj"]

[ext_resource type="Script" uid="uid://fnpavluhkngl" path="res://scripts/simple_ai.gd" id="1_lpjxq"]

[node name="EnemySimpleAI" type="Node2D"]
script = ExtResource("1_lpjxq")
